testing 100vh to fix bg img jumping on mobile

--- a/css/reiki.scss
+++ b/css/reiki.scss
@@ -6,6 +6,7 @@ body {
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100vh;
 }
 
 .reiki-section {
